feat: adds security updates
